fixed header z-index

--- a/public/css/prefixed/style.css
+++ b/public/css/prefixed/style.css
@@ -607,7 +607,7 @@ header {
   background-color: white;
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 500;
 }
 header svg {
   width: 10rem;
